[package]
name = "quicksort_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
rand = "0.8.5"
rayon = "1.7.0"

[[bench]]
name = "quicksort_mut"
harness = false

[[bench]]
name = "quicksort"
harness = false

[[bench]]
name = "quicksort_par"
harness = false
